# dspy

./: .readthedocs.yaml  Makefile  README.md  pyproject.toml  sweep.yaml
.github/workflows/: build_package.yml  main.yml
docs/: DOCS_README.md  README.rst  conf.py  evaluate.md  index.rst  language_models_client.md  language_models_client.rst  modules.md  modules.rst  retrieve.md  teleprompters.md  using_local_models.md
docs/datasets/: colors.md  dataset.md  gsm8k.md  hotpotqa.md
docs/getting_started/: README.md  main.md
docs/language_models/: language_models_client.md  using_local_models.md
docs/modules/: modules.md
docs/primitives/: assertions.md
docs/signatures/: signatures.md
docs/source/: index.rst  readme.rst
docs/teleprompt/: bootstrap.md  ensemble.md  finetune.md  vanilla.md
docs/teleprompters/: teleprompters.md
dsp/: __init__.py
dsp/evaluation/: test_utils.py  utils.py
dsp/modules/: gpt3.py  module.py  signature_sampler.py
dsp/primitives/: compiler.py
dsp/retriever/: retriever_interface.py
dspy/: compiler.py
dspy/modules/: prompt_compression.py
dspy/predict/: retry.py
dspy/primitives/: assertions.py  box.py  example.py  module.py  prediction.py  program.py  python_interpreter.py
dspy/retriever/: signature_retriever.py
dspy/signatures/: field.py  sampler.py  signature.py  signature_sampler.py
dspy/teleprompt/: bootstrap.py  ensemble.py  finetune.py  random_search.py  signature_opt.py  teleprompt.py
inspect-app/react-app/: README.md
tests/: test_assertion_helpers.py  test_openai.py  test_signature.py
(+10 files in other folders)
